--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -6,3 +6,7 @@ spring:
     password: password
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+
+app:
+  ui:
+    uri: ${UI_URI:http://localhost:4200}
